<resources>
    <string name="app_name">NuTrack</string>


    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Registration-->
    <string name="all_fields_must_fill_in_error">All Fields must be filled in.</string>
    <string name="passwords_not_the_same_error">Confirm password must be the same as password.</string>
    <string name="email_already_exist">The email address has already been registered</string>

    <string name="dont_have_account_question"><u>Don\'t have an account? Sign up now!</u></string>
    <string name="title_activity_menu_bar">MenuBar</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navi drawer</string>
    <string name="drawer_close">Close navi drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nutrack_logo">NuTrack Logo</string>
    <string name="login">Login</string>
    <string name="lbs">lbs</string>
    <string name="weight">Weight (lbs)</string>
    <string name="goal_weight">Goal Weight (lbs)</string>
    <string name="cm">cm</string>
    <string name="height">Height (cm)</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="nutrients">Nutrients</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="setup_your_profile">Setup Your Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="food_details">FOOD DETAILS</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="recent_search">Recent Search</string>
    <string name="gender">Gender</string>
    <string name="overview">Overview</string>
    <string name="social">Social</string>
    <string name="daily_log">Daily Log</string>
    <string name="for_more_details_click_here"><u>For more details click here.</u></string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>

    <string-array name="list_view_labels">
        <item>Name</item>
        <item>Height</item>
        <item>Weight</item>
        <item>Date of Birth</item>
        <item>Gender</item>
    </string-array>

    <!-- SharedPreferences -->
    <string name="preference_profile">SharedPreferenceProfile</string>
    <string name="preference_goal">SharedPreferenceGoal</string>
    <string name="preference_account">SharedPreferenceAccount</string>
</resources>
