<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_account_balance_black_36dp"
            android:title="@string/home"
            android:checked="true" />

        <item
            android:id="@+id/nav_calories_calculator"
            android:icon="@drawable/ic_restaurant_black_36dp"
            android:title="@string/nutrients"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/sign_out" />
    </group>
</menu>