<?xml version="1.0" encoding="utf-8"?>
<!-- Will use a different layout in the next version -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uw.tcss450.nutrack.activity.LoginActivity"
    android:background="#2196F3">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/guidelineLeft"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="42dp"
        app:layout_constraintGuide_percent="0.1015625" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/guidelineRight"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="371dp"
        app:layout_constraintGuide_percent="0.9036458" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineTop"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="67dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.10229277" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineTop1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3080425"
        tools:layout_editor_absoluteY="203dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/guidelineTop2"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="269dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.40819424" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/main_logo_white"
        android:id="@+id/NutrackLogo"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop2"
        android:contentDescription="@string/nutrack_logo" />

    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/login_editText_email"
        android:hint="@string/email"
        android:textSize="24sp"
        android:inputType="textWebEmailAddress"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop2"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="0dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@android:color/white" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_editText_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/login_editText_email"
        android:layout_marginTop="8dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@android:color/white" />

    <Button
        android:text="@string/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_button_login"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/login_editText_password"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ghost_button"
        android:textColor="#FFFFFF"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp" />

    <TextView
        android:text="@string/dont_have_account_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_textView_register"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

</android.support.constraint.ConstraintLayout>
